submit button updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,3 +215,12 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+button[type=submit] {
+  padding: 10px 30px;
+  font-size: 18px;
+  color: #ffffff;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
+}
