--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,14 @@ footer {
   border-top: 8px solid #4aaaa5;
   height: 50px;
 }
+/* #footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  Set the fixed height of the footer here
+  height: 60px;
+  background-color: #f5f5f5;
+} */
 
 h3, h2 {
   padding-bottom: 20px;
